Added client ability to pull 5 games from server

--- a/indie_arcade_client/index.html
+++ b/indie_arcade_client/index.html
@@ -8,12 +8,12 @@
     <script src="mustache.js"></script>
   </head>
   <body>
-    <div id="questions"></div>
+    <div id="games"></div>
 
-    <script id="question-listing-tmpl" type="x-tmpl-mustache">
-      <div class="question-listing">
+    <script id="game-listing-tmpl" type="x-tmpl-mustache">
+      <div class="game-listing">
         <h2>{{title}}</h2>
-        <p>{{view_count}}</p>
+        <p>{{description}}</p>
         <hr>
       </div>
     </script>
