--- a/indie_arcade_client/index.html
+++ b/indie_arcade_client/index.html
@@ -8,6 +8,10 @@
     <script src="mustache.js"></script>
   </head>
   <body>
+    <div>
+      <a id="play-game">Play</a> |
+      <a>Get New Games</a> |
+    </div>
     <div id="games"></div>
 
     <script id="game-listing-tmpl" type="x-tmpl-mustache">
